--- a/popup.html
+++ b/popup.html
@@ -515,6 +515,7 @@
         <div id="courseDetails" class="course-list" style="display: none;"></div>
         
         <button id="exportBtn" class="button" style="display: none;">📋 Copy Course Data</button>
+        <button id="todayLessonsBtn" class="button" style="display: none;">📋 Copy Daily Tasks</button>
     </div>
     
     <script src="popup.js"></script>
